--- a/package.json
+++ b/package.json
@@ -1,18 +1,38 @@
 {
   "name": "Bootstrap",
   "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
+  "description": "学习bootstrap less angulararjs gurnt",
+  "main": "Gruntfile.js",
   "dependencies": {
-    "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
-    "debug": "~2.1.1",
+    "debug": "~2.1.3",
+    "express": "~4.12.4",
+    "less-middleware": "~1.0.4",
+    "morgan": "~1.5.3",
+    "serve-favicon": "~2.2.1",
     "ejs": "~2.3.1",
-    "express": "~4.12.2",
-    "less-middleware": "1.0.x",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
-  }
+    "body-parser": "~1.12.4"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/julia39/Bootstrap.git"
+  },
+  "keywords": [
+    "bootstrap",
+    "less",
+    "angularjs",
+    "grunt"
+  ],
+  "author": "zhou tingZhu",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/julia39/Bootstrap/issues"
+  },
+  "homepage": "https://github.com/julia39/Bootstrap"
 }
