--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.3",
     "express": "~4.12.4",
-    "less-middleware": "~1.0.4",
+    "less-middleware": "^1.0.4",
     "morgan": "~1.5.3",
     "serve-favicon": "~2.2.1",
     "ejs": "~2.3.1",
